draw multiple objects

--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
@@ -168,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="scripts\game.ts" />
+    <TypeScriptCompile Include="scripts\typings\jquery.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
