--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
@@ -45,6 +45,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EngineIoClientDotNet, Version=0.9.22.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EngineIoClientDotNet.0.9.22\lib\net45\EngineIoClientDotNet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -78,6 +82,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -94,6 +102,10 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="WebSocket4Net, Version=0.14.1.0, Culture=neutral, PublicKeyToken=eb4e154b696bf72a, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebSocket4Net.0.14.1\lib\net45\WebSocket4Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -170,7 +182,15 @@
   <ItemGroup>
     <TypeScriptCompile Include="scripts\gameClient.ts" />
     <TypeScriptCompile Include="scripts\gameServer.ts" />
+    <TypeScriptCompile Include="scripts\GameInterfaces.ts" />
     <TypeScriptCompile Include="scripts\typings\jquery.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node-0.10.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node-0.11.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node-0.12.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node-0.8.8.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node-4.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\node\node.d.ts" />
+    <TypeScriptCompile Include="scripts\typings\socket.io\socket.io.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
