--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/packages.config
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
@@ -17,5 +18,9 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net452" />
   <package id="Node.js" version="5.3.0" targetFramework="net452" />
+  <package id="node.TypeScript.DefinitelyTyped" version="2.9.2" targetFramework="net452" />
+  <package id="socket.io.TypeScript.DefinitelyTyped" version="1.4.0" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
 </packages>
