socket.io implementeret, mangler refaktorering

--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/GladiatorTrainerGame.csproj
@@ -140,11 +140,11 @@
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
-    <None Include=".bin\node.cmd" />
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="Views\Default\Index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
